Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-the-innovation-unit-global-experience-language-portal" class="anchor" href="#welcome-to-the-innovation-unit-global-experience-language-portal" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Innovation Unit Global Experience Language Portal.</h3>
+
+<p>Here you will find <strong>a repository of building blocks</strong> you could access for your presentation, communication, and digital needs.</p>
+
+<p><img src="http://www.goingreece.gr/go-greece/uploads/2013/05/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></p>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
