--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 <p><img src="http://www.goingreece.gr/go-greece/uploads/2013/05/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></p>
 
+<p><img src="dealLater_Jan6_2015/  GIT/UNICF_IU/images/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></p>
+
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
