--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 
 <p>Here you will find <strong>a repository of building blocks</strong> you could access for your presentation, communication, and digital needs.</p>
 
-<p><img src="http://www.goingreece.gr/go-greece/uploads/2013/05/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></p>
-
-<p><img src="dealLater_Jan6_2015/  GIT/UNICF_IU/images/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></p>
+<p><a href="https://www.dropbox.com/sh/ej2ku630mqd443o/AAASRcJSZrNyafjK1dLA5d9Ja?dl=0"><img src="http://www.goingreece.gr/go-greece/uploads/2013/05/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></a></p>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
