--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 <p><a href="https://www.dropbox.com/sh/ej2ku630mqd443o/AAASRcJSZrNyafjK1dLA5d9Ja?dl=0"><img src="http://www.goingreece.gr/go-greece/uploads/2013/05/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></a></p>
 
+<p><a href="https://www.dropbox.com/s/ywf80755kbuy5b8/RapidPro_logo_red.svg?dl=0"><img src="GIT/UNICEF_IU/images/RapidPro_logo_red.png" alt="RapidPro Logo Red"></a></p>
+
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
