--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
+        <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    ...
+  </div>
+</nav>
         <h1>UNICEF IU</h1>
         <p>IU Global Experience Language Portal</p>
 
@@ -33,9 +38,8 @@
 
 <p>Here you will find <strong>a repository of building blocks</strong> you could access for your presentation, communication, and digital needs.</p>
 
-<p><a href="https://www.dropbox.com/sh/ej2ku630mqd443o/AAASRcJSZrNyafjK1dLA5d9Ja?dl=0"><img src="http://www.goingreece.gr/go-greece/uploads/2013/05/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></a></p>
-
-<p><a href="https://www.dropbox.com/s/ywf80755kbuy5b8/RapidPro_logo_red.svg?dl=0"><img src="GIT/UNICEF_IU/images/RapidPro_logo_red.png" alt="RapidPro Logo Red"></a></p>
+<p><a href="https://www.dropbox.com/sh/ej2ku630mqd443o/AAASRcJSZrNyafjK1dLA5d9Ja?dl=0"><img src="http://www.goingreece.gr/go-greece/uploads/2013/05/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></a>
+  <a href="https://www.dropbox.com/sh/ej2ku630mqd443o/AAASRcJSZrNyafjK1dLA5d9Ja?dl=0"><img src="http://www.goingreece.gr/go-greece/uploads/2013/05/kaminia-hydra-island-greece.jpg" alt="Hydra, Greece"></a></p>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
